Update documentation and move autocollection endpoint to adapter
